--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
   <body>
     <h1>My Web Page.</h1>
     Hello there, awesome person!
+    <img src="https://octodex.github.com/images/vinyltocat.png">
   </body>
 </html>
