--- a/index.html
+++ b/index.html
@@ -5,8 +5,15 @@
   </title>
   </head>
   <body>
-    <h1>My Web Page.</h1>
-    Hello there, awesome person!
-    <img src="https://octodex.github.com/images/vinyltocat.png">
+    <ol>
+      <li>This</li>
+      <li>is an</li>
+      <li>Ordered List</li>
+    </ol>
+    <ul>
+      <li>This</li>
+      <li>is an</li>
+      <li>ordered list</li>
+    </ul>
   </body>
 </html>
