--- a/index.html
+++ b/index.html
@@ -15,5 +15,8 @@
       <li>is an</li>
       <li>ordered list</li>
     </ul>
+    <ol>
+      <li><a href="https://github.com">Github</a></li>
+    </ol>
   </body>
 </html>
